@@ -1,9 +1,11 @@
 Changes in quota-tools from 3.12 to 3.13
 * added sanity check to quota reporting (Jan Kara)
+* fixed check for illegal references in quotacheck(8) (Jan Kara)
 * added NFSv4 to the list of supported fs types (Jan Kara)
-* added printing of directories to quotacheck (Jan Kara, Jan Engelhardt)
+* updating of progress is now less frequent - should speedup quotacheck -v a bit (Jan Kara)
+* added printing of directories to quotacheck(8) (Jan Kara, Jan Engelhardt)
 * added dynamic mountpoint array allocation (Jan Kara)
-* made quotacheck(8) more friendly for journaled quota (Jan Kara)
+* made quotacheck(8) more friendly to journaled quota (Jan Kara)
 * changed configure to detect whether nls is needed (Tomasz Kloczko, Jan Kara)
 * added JFS into a set of supported filesystems (David Kleikamp)
 * added French translation (Jerome Schell)
